Finished main design, still missing some minor details but will work on them later, next will be working on the JS section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,25 @@
     </header>
 
     <main class="main">
-      <section class="main--info-display"></section>
-      <div class="map"></div>
+      <section class="pannel">
+        <div class="pannel--info">
+          <p class="pannel--info-title">Ip address</p>
+          <h2 class="pannel--info-display pannel--info-ip">192.168.0.1</h2>
+        </div>
+        <div class="pannel--info">
+          <p class="pannel--info-title">Location</p>
+          <h2 class="pannel--info-display pannel--info-location">Costa Rica</h2>
+        </div>
+        <div class="pannel--info">
+          <p class="pannel--info-title">Timezone</p>
+          <h2 class="pannel--info-display pannel--info-timezone">UTC</h2>
+        </div>
+        <div class="pannel--info">
+          <p class="pannel--info-title">ISP</p>
+          <h2 class="pannel--info-display pannel--info-isp">ICE</h2>
+        </div>
+      </section>
+      <div class="map" id="map"></div>
     </main>
   </body>
 </html>
