--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      defer
+    ></script>
 
     <link
       rel="stylesheet"
@@ -19,6 +27,7 @@
       crossorigin="anonymous"
     />
 
+    <script src="js/app.js" defer></script>
     <link rel="stylesheet" href="css/main.css" />
 
     <title>IP Address Tracker</title>
@@ -55,7 +64,9 @@
           <h2 class="pannel--info-display pannel--info-isp">ICE</h2>
         </div>
       </section>
-      <div class="map" id="map"></div>
     </main>
+    <section class="mapContainer">
+      <div class="map" id="map"></div>
+    </section>
   </body>
 </html>
