--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <!-- displays site properly based on user's device -->
 
     <link
@@ -49,19 +53,19 @@
       <section class="pannel">
         <div class="pannel--info">
           <p class="pannel--info-title">Ip address</p>
-          <h2 class="pannel--info-display pannel--info-ip">192.168.0.1</h2>
+          <h2 class="pannel--info-display pannel--info-ip"></h2>
         </div>
         <div class="pannel--info">
           <p class="pannel--info-title">Location</p>
-          <h2 class="pannel--info-display pannel--info-location">Costa Rica</h2>
+          <h2 class="pannel--info-display pannel--info-location"></h2>
         </div>
         <div class="pannel--info">
           <p class="pannel--info-title">Timezone</p>
-          <h2 class="pannel--info-display pannel--info-timezone">UTC</h2>
+          <h2 class="pannel--info-display pannel--info-timezone"></h2>
         </div>
         <div class="pannel--info">
           <p class="pannel--info-title">ISP</p>
-          <h2 class="pannel--info-display pannel--info-isp">ICE</h2>
+          <h2 class="pannel--info-display pannel--info-isp"></h2>
         </div>
       </section>
     </main>
