Added the alerts if the information cannot be found or if the location is not available.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
     <!-- displays site properly based on user's device -->
 
+    <script
+      src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"
+      defer
+    ></script>
     <link
       rel="icon"
       type="image/png"
