Added a loading animation for the fetch API

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="css/loading.css" />
+
     <script src="js/app.js" defer></script>
     <link rel="stylesheet" href="css/main.css" />
 
@@ -76,5 +78,13 @@
     <section class="mapContainer">
       <div class="map" id="map"></div>
     </section>
+
+    <!-- <div class="ld ld-spin spinner"> -->
+    <img
+      class="spinner ld ld-spin hide"
+      src="/images/spinner.png"
+      alt="Spiner"
+    />
+    <!-- </div> -->
   </body>
 </html>
