--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- <div class="ld ld-spin spinner"> -->
     <img
       class="spinner ld ld-spin hide"
-      src="../images/spinner.png"
+      src="images/spinner.png"
       alt="Spiner"
     />
     <!-- </div> -->
